Change the titles and ext. links in minibook_first_steps

--- a/books/minibook_commence/config
+++ b/books/minibook_commence/config
@@ -1,7 +1,8 @@
 #!/bin/sh
 #
 
-BOOKTITLE="first steps on the command line"
+BOOKTITLE="Commence the Commands"
+BOOKSUBTITLE="A Quick-Start Guide to the Linux Shell"
 
 ##################
 # define minibook
