Set the title to Get Started on Linux in 32 Minutes: Intro to the Shell

--- a/books/minibook_get_started/config
+++ b/books/minibook_get_started/config
@@ -1,8 +1,8 @@
 #!/bin/sh
 #
 
-BOOKTITLE="Commence the Commands"
-BOOKSUBTITLE="A Quick-Start Guide to the Linux Shell"
+BOOKTITLE="Get Started on Linux in 32 Minutes"
+BOOKSUBTITLE="Intro to the Shell"
 
 ##################
 # define minibook
