--- a/books/minibook_get_started/config
+++ b/books/minibook_get_started/config
@@ -1,8 +1,8 @@
 #!/bin/sh
 #
 
-BOOKTITLE="45 Minutes to Get Started on the Command Line"
-BOOKSUBTITLE="A Linux Primer"
+BOOKTITLE="Get Started on Linux in 45 Minutes"
+BOOKSUBTITLE="Intro to the Shell"
 
 ##################
 # define minibook
