--- a/books/minibook_commence/config
+++ b/books/minibook_commence/config
@@ -10,6 +10,7 @@ BOOKSUBTITLE="A Quick-Start Guide to the Linux Shell"
 
 # define book as directories in certain order
 
+add_mod chapter vagrant
 add_mod chapter man_pages
 add_mod chapter working_with_directories
 add_mod chapter working_with_files
