Modify the abstract, preface and rev_history; change the title
Get Started on Linux by End of Tonight:
Without Breaking Your Box – A Userbie Guide

Co-authored-by: Maksymilian Lowczynski <maksymilian.job@wants-no-spam.gmail.com>

--- a/books/minibook_get_started/config
+++ b/books/minibook_get_started/config
@@ -1,8 +1,8 @@
 #!/bin/sh
 #
 
-BOOKTITLE="Commence the Commands"
-BOOKSUBTITLE="A Quick-Start Guide to the Linux Shell"
+BOOKTITLE="Get Started on Linux by End of Tonight"
+BOOKSUBTITLE="Without Breaking Your Box &#8211; A Userbie Guide"
 
 ##################
 # define minibook
