--- a/books/minibook_get_started/config
+++ b/books/minibook_get_started/config
@@ -12,6 +12,6 @@ BOOKSUBTITLE="Without Breaking Your Box &#8211; A Userbie Guide"
 
 add_mod chapter vagrant
 add_mod chapter man_pages
-add_mod chapter working_with_directories
-add_mod chapter working_with_files
-add_mod chapter working_with_file_contents
+add_mod chapter work_with_directories
+add_mod chapter work_with_files
+add_mod chapter work_with_file_contents
